ipc/ipdl/test/ipdl/ok/PmutualRecUnion.ipdl
union X {
    int;
    Y[];
    Y?;
};

union Y {
    X;
    Z;
};

union Z {
    double;
    X;
};

[ChildProc=any]
protocol PmutualRecUnion {
child:
    async Test(X x, Y y, Z z);
    async __delete__();
};
